package com.seproje.hospital.personel.kayit;

import com.seproje.hospital.auth.AuthUserRepository;

public interface KayitGorevlisiRepository extends AuthUserRepository<KayitGorevlisi> {
}
